# cpp-projects

./: README.md
hw01-sudoku-h3ic/: field-checker.cpp  sudoku-solver.cpp
hw01-sudoku-h3ic/public-tests/: 1.in  2.in  3.in  4.in  5.in  6.in
hw01-sudoku-h3ic/scripts/: build.sh
hw03-number-trie-h3ic/: CMakeLists.txt
hw05-sea-battle-h3ic/game/: sea-battle.cpp  sea-battle.h
hw05-sea-battle-h3ic/players/: human-player.cpp
hw06-vector-h3ic/: .clang-format  CMakeLists.txt  README.md  main.cpp  vector.h
